# Project_Dynamite

./: .gitIgnore  CMakeLists.txt  README.md  imgui.ini
dynamite/: camera.h  core.cpp  core.h  editor.cpp  editor.h  entity.cpp  entity.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  texture.cpp  texture.h
dynamite/component/: animation.cpp  animation.h  animator.cpp  animator.h  collider.cpp  collider.h  component.cpp  component.h  sprite.cpp  sprite.h
dynamite/event/: input.cpp  input.h
dynamite/math/: math.cpp  math.h  vector2.cpp  vector2.h
dynamite/physics/: physics.cpp  physics.h
dynamite/ui/: font.cpp  font.h  inputfield.cpp  inputfield.h  text.cpp  text.h  uielement.cpp  uielement.h
game/: game.cpp  game.h
game/resources/: blue.tga  circle.tga  font.csv  font.tga  red.tga  test.dynamite
